# rar

./: CHANGELOG.md  README.md  pubspec.yaml  test_runner.sh
android/: build.gradle
android/src/main/kotlin/com/lkrjangid/rar/: RarPlugin.kt
example/: pubspec.yaml
example/android/app/: build.gradle
example/integration_test/: rar_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: file_browser.dart  main.dart  platform_io.dart  platform_web.dart
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/test/: widget_test.dart
example/web/: index.html  rar_web.js
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
ios/: rar.podspec
lib/: rar.dart  rar_platform_exports.dart  rar_platform_interface.dart
lib/src/: rar_desktop_ffi.dart  rar_ffi.dart  rar_linux.dart  rar_macos.dart  rar_method_channel.dart  rar_web.dart  rar_windows.dart
linux/: CMakeLists.txt  rar_plugin.cc
macos/: rar.podspec
macos/Classes/: RarPlugin.swift
test/: rar_platform_interface_test.dart
web/: rar_web.js
windows/: CMakeLists.txt  rar_plugin.cpp
